# kuksa.apps

./: README.md
cloud-apps/: README.md
cloud-apps/sensoris.cloud/: .project  keystore.jks  pom.xml
invehicle-apps/: README.md
invehicle-apps/examples/demo-certificates/: CA.key
invehicle-apps/kuksa-cloud-dashboard/: CMakeLists.txt  README.md  kuksa-dashboard.yaml  start.sh
invehicle-apps/kuksa-cloud-dashboard/docker/: Dockerfile  build.sh  dockerentry.sh
invehicle-apps/kuksa-cloud-dashboard/include/: emailHTTP.hpp  honoMqtt.hpp
invehicle-apps/kuksa-cloud-dashboard/src/: emailHTTP.cpp  honoMqtt.cpp  main.cpp
invehicle-apps/kuksa-cloud-mechanic/: CMakeLists.txt  README.md
invehicle-apps/kuksa-cloud-mechanic/docker/: Dockerfile  Readme.md  build.sh  dockerentry.sh
invehicle-apps/kuksa-cloud-mechanic/src/: honoMqtt.cpp  main.cpp
invehicle-apps/kuksa-traccar-client/: Readme.md  build.sh  requirements.txt  traccar-client.ini  traccar-client.py
invehicle-apps/kuksa-traccar-client/docker/: Dockerfile  Dockerfile.singlestage  Readme.md  build.sh
invehicle-apps/kuksa-traccar-client/providers/: gpsd.py  kuksa_val.py  simplelog.py
invehicle-apps/kuksa-traccar-client/providers/kuksa/: clientComm.py  gpsd.nmea  gpsd_feeder.py  readme.md  token.json  token.json.token
invehicle-apps/sensoris.invehicle/: CMakeLists.txt  README.md
invehicle-apps/sensoris.invehicle/docker/: Dockerfile  Readme.md  build.sh  dockerentry.sh
invehicle-apps/sensoris.invehicle/event-handlers/include/: Localization.hpp  Powertrain.hpp
invehicle-apps/sensoris.invehicle/event-handlers/src/: Localization.cpp  Powertrain.cpp
invehicle-apps/sensoris.invehicle/sensoris/include/: DataMessageHandler.hpp  EventHandler.hpp  Identifier.hpp  SessionHandler.hpp
invehicle-apps/sensoris.invehicle/sensoris/protobuf/categories/: brake.pb.cc  brake.pb.h  driving_behavior.pb.cc  driving_behavior.pb.h  intersection_attribution.pb.cc  intersection_attribution.pb.h  localization.pb.cc  localization.pb.h  map.pb.cc  map.pb.h  object_detection.pb.cc  object_detection.pb.h  powertrain.pb.cc  powertrain.pb.h  road_attribution.pb.cc  road_attribution.pb.h  traffic_events.pb.cc  traffic_events.pb.h  traffic_maneuver.pb.cc  traffic_maneuver.pb.h  traffic_regulation.pb.cc  traffic_regulation.pb.h  weather.pb.cc  weather.pb.h
invehicle-apps/sensoris.invehicle/sensoris/protobuf/messages/: data.pb.cc  data.pb.h
invehicle-apps/sensoris.invehicle/sensoris/protobuf/types/: base.pb.cc  base.pb.h  source.pb.cc  source.pb.h  spatial.pb.cc  spatial.pb.h
invehicle-apps/sensoris.invehicle/sensoris/src/: DataMessageHandler.cpp  SessionHandler.cpp  main.cpp
invehicle-apps/sensoris.invehicle/websocket/include/: W3CClient.hpp
invehicle-apps/sensoris.invehicle/websocket/src/: W3CClient.cpp
kuksa-android/: README.md
kuksa-android/app/: build.gradle
kuksa-android/app/src/main/: AndroidManifest.xml
kuksa-android/gradle/wrapper/: gradle-wrapper.properties
kuksa-app-publisher/: README.md  conf.yaml  kuksa-cloudmechanic.yaml  kuksa-dashboard.yaml  kuksa-publisher.py  kuksa-traccar.yaml
kuksa-traccar-client/: Dockerfile  Readme.md  build.sh  mktestpackage.sh  simplelog_example.csv  traccar-client.ini  traccar-client.py
kuksa-traccar-client/providers/: gpsd.py
vehicle2cloud/: CMakeLists.txt
vehicle2cloud/w3c-visserver/: README.md
(+207 files in other folders)
